add section mainFon

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,39 @@ $title = $text . ' ' . $city;
     </header>
     <!-- Основное содержимое страницы -->
     <main class="main">
- 
+        <section class="mainFon">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 container">
+                        <div class="mainFon__box">
+                            <div class="mainFon__left">
+                                <div class="mainFon__imgW">
+                                    <img class="mainFon__img" src="assets/img/img345.jpg" alt="" >
+                                </div>
+                                <ul class="mainFon__ul">
+                                    <li>20-30 min sur place  </li>
+                                    <li>Ouverture sans dommage</li>
+                                </ul>
+                            </div>
+                            <div class="mainFon__fight">
+                                <div class="mainFon__fight-top">
+                                    <div class="mainFon__fight-top-imgW">
+                                        <img class="mainFon__fight-top-img" src="assets/img/013.png" alt="" >
+                                    </div>
+                                    <div class="mainFon__fight-top-btnW">
+                                        <a class="mainFon__fight-top-btn" href="#" ><span>111222333</span></a>
+                                    </div>
+                                </div>
+                                <div class="mainFon__fight-bottom">
+                                    <img class="mainFon__fight-bottom-img" src="assets/img/014.png" alt="" >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class='btnFixed'>
             <div class='btnFixed__box'>
                 <a class="btnFixed__btn" href="#" ><span>111222333</span></a>
