add section locksmith

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,32 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='locksmith'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='locksmith__box'>
+                            <div class="locksmith__left">
+                                <div class="locksmith__imgW">
+                                    <img class="locksmith__img" src="assets/img/img350.jpg" alt="" >
+                                </div>
+                                <h2 class="locksmith__title">Serrurier à proximité</h2>
+                            </div>
+                            <div class="locksmith__right">
+                                <p class="locksmith__txt">Besoin d'un <b>serrurier à proximité</b>? Nous  sommes là pour vous aider ! Nous offrons des  ouvertures de porte rapides et fiables sans  dommage. Notre service professionnel est  disponible 24 heures sur 24. Appelez-nous dès  maintenant !
+                                </p>
+                                <p class="locksmith__name">CCIF est contrôlée  et qualifiée</p>
+                                <ul class="locksmith__ul">
+                                    <li>Service pro disponible 24h/24 </li>
+                                    <li>Intervention rapide à +proximité+  </li>
+                                    <li>Satisfaction client priorité absolue</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
