--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,35 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='changeLock'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='changeLock__box'>
+                            <div class="changeLock__left">
+                                <div class="changeLock__imgW">
+                                    <img class="changeLock__img" src="assets/img/img353.jpg" alt="" >
+                                </div>
+                                <h2 class="changeLock__title">Changement de serrure</h2>
+                            </div>
+                            <div class="changeLock__right">
+                                <p class="changeLock__txt">Besoin d'un <b>changement de serrure à
+                                    +proximité +</b>? Nous offrons un service rapide  et fiable pour remplacer vos serrures. Nos  techniciens expérimentés sont là pour vous  aider. Appelez-nous dès maintenant pour  prendre rendez-vous !"
+                                    </p>
+                                <p class="changeLock__price"><span class="changeLock__span1">Offre exceptionnelle : <br>  Serrures à partir de
+                                </span><span class="changeLock__span2">14 €
+                                </span></p>
+                                <div class="changeLock__imgWrapp">
+                                    <img class="changeLock__imgR" src="assets/img/002.png" alt="" >
+                                    <img class="changeLock__imgR" src="assets/img/11.png" alt="" >
+                                    <img class="changeLock__imgR" src="assets/img/13.png" alt="" >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
