add section doorOpening

--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,31 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='doorOpening'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='doorOpening__box'>
+                            <div class="doorOpening__left">
+                                <div class="doorOpening__imgW">
+                                    <img class="doorOpening__img" src="assets/img/img359.jpg" alt="" >
+                                </div>
+                                <h2 class="doorOpening__title">Ouverture de porte</h2>
+                            </div>
+                            <div class="doorOpening__right">
+                                <p class="doorOpening__txt">Nous proposons des <b>ouvertures de porte</b>  professionnelles sans dommage. Nos techniciens  expérimentés sont spécialisés dans l'ouverture  rapide et efficace des portes sans causer de  dégâts. Appelez-nous maintenant pour bénéficier  de nos services d'ouverture de porte rapides et  fiables
+                                </p>
+                                <ul class="doorOpening__ul">
+                                    <li>Techniciens expérimentés et spécialisés  </li>
+                                    <li>Satisfaction client priorité absolue  </li>
+                                    <li>Service fiable</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
