add section locksmithServices

--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,50 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='locksmithServices'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='locksmithServices__box'>
+                            <div class="locksmithServices__left">
+                                <h2 class="locksmithServices__title">Services de serrurerie</h2>
+                                <div class="locksmithServices__imgW">
+                                    <img class="locksmithServices__img" src="assets/img/img363.jpg" alt="" >
+                                </div>
+                            </div>
+                            <div class="locksmithServices__right">
+                                <ul class="locksmithServices__ul">
+                                    <li>Ouvertures de porte sans dommage</li>
+                                    <li>Changement et réparation de serrures</li>
+                                    <li>Fabrication de clés</li>
+                                    <li>Installation de systèmes de sécurité</li>
+                                    <li>Services d'urgence 24h/24 et 7j/7</li>
+                                    <li>Ouverture de voitures et de coffres-forts</li>
+                                </ul>
+                                <div class="locksmithServices__middle">
+                                    <div class="locksmithServices__imgW2">
+                                        <img class="locksmithServices__img2" src="assets/img/003.png" alt="" >
+                                    </div>
+                                    <div class="locksmithServices__btnW">
+                                        <a class="locksmithServices__btn" href="#" ><span>111222333</span></a>
+                                    </div>
+                                </div>
+                                <div class="locksmithServices__bottom">
+                                    <div class="locksmithServices__imgW3">
+                                        <img class="locksmithServices__img3" src="assets/img/004.png" alt="" >
+                                    </div>
+                                    <ul class="locksmithServices__ull">
+                                        <li>Sécurité</li>
+                                        <li>Serrurerie</li>
+                                        <li>Urgences</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
