add section burglaryProtection

--- a/app/index.html
+++ b/app/index.html
@@ -195,6 +195,30 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='burglaryProtection'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='burglaryProtection__box'>
+                            <div class="burglaryProtection__left">
+                                <div class="burglaryProtection__imgW">
+                                    <img class="burglaryProtection__img" src="assets/img/img366.jpg" alt="" >
+                                </div>
+                                <h2 class="burglaryProtection__title">Protection contre  cambriolages</h2>
+                            </div>
+                            <div class="burglaryProtection__right">
+                                <ul class="burglaryProtection__ul">
+                                    <li>Conseils et recommandations pour  sécuriser les maisons et les commerces</li>
+                                    <li>Installation de poignées de sécurité et  de serrures supplémentaires</li>
+                                    <li>Réparation des dégâts causés par  effraction aux portes et fenêtres</li>
+                                    <li>Réparation des dégâts causés par  effraction aux portes et fenêtres</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
