--- a/src/index.html
+++ b/src/index.html
@@ -219,6 +219,31 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='openingRepairingSafes'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='openingRepairingSafes__box'>
+                            <div class="openingRepairingSafesd__left">
+                                <div class="openingRepairingSafes__imgW">
+                                    <img class="openingRepairingSafes__img" src="assets/img/img369.jpg" alt="" >
+                                </div>
+                                <h2 class="openingRepairingSafes__title">Ouverture et réparation  de coffres-forts</h2>
+                            </div>
+                            <div class="openingRepairingSafesd__right">
+                                <p class="openingRepairingSafes__txt">En cas de <b>problème avec votre coffre-fort</b>,  notre service de dépannage expérimenté peut  vous aider. Nous sommes spécialisés dans  l'ouverture et la  <b>réparation de coffres-forts</b> et  sommes disponibles pour vous aider dans toutes  les situations difficiles. Nous offrons également  des services d'urgence pour les coffres-forts 24  heures sur 24 et 7 jours sur 7. Appelez-nous dès  maintenant pour bénéficier de nos services  rapides et fiables.
+                                </p>
+                                <div class="openingRepairingSafes__blockImg">
+                                    <img class="openingRepairingSafes__img2" src="assets/img/009.png" alt="" >
+                                    <img class="openingRepairingSafes__img2" src="assets/img/010.png" alt="" >
+                                    <img class="openingRepairingSafes__img2" src="assets/img/011.png" alt="" >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
