--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,67 @@ $title = $text . ' ' . $city;
                 </div>
             </div>
         </section>
+        <section class='recommendedByInsurance'>
+            <div class='container-fluid'>
+                <div class='row'>
+                    <div class='col-12 container'>
+                        <div class='recommendedByInsurance__box'>
+                            <div class="recommendedByInsurance__left">
+                                <h2 class="recommendedByInsurance__title">Recommandé par les  assurances</h2>
+                                <p class="recommendedByInsurance__txt">En tant que serrurier, nous travaillons en étroite  collaboration avec différentes compagnies  d'assurance. Après avoir effectué notre travail,  nous vous fournirons une facture que vous  pourrez soumettre à votre assurance. Selon les  conditions de votre contrat d'assurance, vous  pourrez être remboursé en partie ou en totalité.  De cette façon, en cas de sinistre, vous pourrez  bénéficier rapidement et facilement d'un soutien  financier de votre assurance. N'hésitez pas à  nous contacter pour plus d'informations sur nos  services dans le domaine de la clé et de la  sécurité.
+                                </p>
+                            </div>
+                            <div class="recommendedByInsurance__right">
+                                <img class="recommendedByInsurance__img" src="assets/img/012.png" alt="" >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class='forms'>
+           <div class='forms__wrapper'>
+              <div class='container-fluid'>
+                 <div class='row'>
+                    <div class='col-12 container'>
+                       <div class='forms__box'>
+                          <h2 class='forms__title'>PRISE DE RENDEZ-VOUS</h2>
+                          <form id='jq_form' class='mb-0 mt-3'>
+                             <div class='my-0'>
+                                <input class='form-control' placeholder='Nom' name='jq_name' type='text'>
+                                <div id='jq_name' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div class='my-4'>
+                                <input class='form-control' placeholder='Téléphone' name='jq_phone' type='text'>
+                                <div id='jq_phone' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div class='my-4'>
+                                <input class='form-control' placeholder='Rue' name='jq_street' type='text'>
+                                <div id='jq_street' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div class='my-4'>
+                                <input class='form-control' placeholder='ZIP Ville' name='jq_city' type='text'>
+                                <div id='jq_city' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div class='my-4'>
+                                <input class='form-control' placeholder='E-mail' name='jq_email' type='text'>
+                                <div id='jq_email' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div class='my-4'>
+                                <textarea rows='3' class='form-control' name='jq_text' placeholder='Décrivez votre problème...'></textarea>
+                                <div id='jq_text' style='font-weight:700;font-size:15px;color:red;padding-top:2px;display:none'>Ceci est un champ obligatoire.</div>
+                             </div>
+                             <div>
+                                <input class='btn  text-uppercase fw-bold mb-0 px-3 py-2 forms__button' type='submit' id='jq_submit' value='Suivant'>
+                             </div>
+                             <div id='jq_success' style='display:none'>Merci pour votre message. Elle a été envoyée.</div>
+                          </form>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </div>
+        </section>
 
         <section class='btnFixed'>
             <div class='btnFixed__box'>
