--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@ $title = $text . ' ' . $city;
         <section class="mainFon">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 container">
+                    <div class="col-12 containerP0">
                         <div class="mainFon__box">
                             <div class="mainFon__left">
                                 <div class="mainFon__imgW">
@@ -74,7 +74,7 @@ $title = $text . ' ' . $city;
         <section class='locksmith'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='locksmith__box'>
                             <div class="locksmith__left">
                                 <div class="locksmith__imgW">
@@ -100,7 +100,7 @@ $title = $text . ' ' . $city;
         <section class='changeLock'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='changeLock__box'>
                             <div class="changeLock__left">
                                 <div class="changeLock__imgW">
@@ -129,7 +129,7 @@ $title = $text . ' ' . $city;
         <section class='doorOpening'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='doorOpening__box'>
                             <div class="doorOpening__left">
                                 <div class="doorOpening__imgW">
@@ -154,7 +154,7 @@ $title = $text . ' ' . $city;
         <section class='locksmithServices'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='locksmithServices__box'>
                             <div class="locksmithServices__left">
                                 <h2 class="locksmithServices__title">Services de serrurerie</h2>
@@ -198,7 +198,7 @@ $title = $text . ' ' . $city;
         <section class='burglaryProtection'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='burglaryProtection__box'>
                             <div class="burglaryProtection__left">
                                 <div class="burglaryProtection__imgW">
@@ -222,7 +222,7 @@ $title = $text . ' ' . $city;
         <section class='openingRepairingSafes'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='openingRepairingSafes__box'>
                             <div class="openingRepairingSafesd__left">
                                 <div class="openingRepairingSafes__imgW">
@@ -247,7 +247,7 @@ $title = $text . ' ' . $city;
         <section class='recommendedByInsurance'>
             <div class='container-fluid'>
                 <div class='row'>
-                    <div class='col-12 container'>
+                    <div class='col-12 containerP0'>
                         <div class='recommendedByInsurance__box'>
                             <div class="recommendedByInsurance__left">
                                 <h2 class="recommendedByInsurance__title">Recommandé par les  assurances</h2>
@@ -306,6 +306,11 @@ $title = $text . ' ' . $city;
            </div>
         </section>
 
+        <section class='btnFixedD'>
+            <div class='btnFixedD__box'>
+                <a class="btnFixedD__btn" href="#" ><img class="btnFixedD__img" src="assets/icons/telephone-fill.svg" alt=""></a>
+            </div>
+        </section>
         <section class='btnFixed'>
             <div class='btnFixed__box'>
                 <a class="btnFixed__btn" href="#" ><span>111222333</span></a>
